v11/parser/tree-sitter-able/test/corpus/character_literals.txt
=================
Character Literals
=================

fn character_literals() {
  simple := 'a'
  escape_newline := '\n'
  escape_tab := '\t'
  escape_quote := '\''
  escape_double_quote := '\"'
  escape_backslash := '\\'
  escape_null := '\0'
  unicode_single := '\u{1F600}'
}
---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (low_precedence_pipe_expression
          (assignment_expression
            (assignment_target
              (pattern_base
                (identifier)))
            (assignment_operator)
            (assignment_expression
              (pipe_expression
                (matchable_expression
                  (pipe_operand_base
                    (range_expression
                      (logical_or_expression
                        (logical_and_expression
                          (bitwise_or_expression
                            (bitwise_xor_expression
                              (bitwise_and_expression
                                (equality_expression
                                  (comparison_expression
                                    (shift_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (exponent_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (character_literal)))))))))))))))))))))))
      (expression_statement
        (low_precedence_pipe_expression
          (assignment_expression
            (assignment_target
              (pattern_base
                (identifier)))
            (assignment_operator)
            (assignment_expression
              (pipe_expression
                (matchable_expression
                  (pipe_operand_base
                    (range_expression
                      (logical_or_expression
                        (logical_and_expression
                          (bitwise_or_expression
                            (bitwise_xor_expression
                              (bitwise_and_expression
                                (equality_expression
                                  (comparison_expression
                                    (shift_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (exponent_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (character_literal)))))))))))))))))))))))
      (expression_statement
        (low_precedence_pipe_expression
          (assignment_expression
            (assignment_target
              (pattern_base
                (identifier)))
            (assignment_operator)
            (assignment_expression
              (pipe_expression
                (matchable_expression
                  (pipe_operand_base
                    (range_expression
                      (logical_or_expression
                        (logical_and_expression
                          (bitwise_or_expression
                            (bitwise_xor_expression
                              (bitwise_and_expression
                                (equality_expression
                                  (comparison_expression
                                    (shift_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (exponent_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (character_literal)))))))))))))))))))))))
      (expression_statement
        (low_precedence_pipe_expression
          (assignment_expression
            (assignment_target
              (pattern_base
                (identifier)))
            (assignment_operator)
            (assignment_expression
              (pipe_expression
                (matchable_expression
                  (pipe_operand_base
                    (range_expression
                      (logical_or_expression
                        (logical_and_expression
                          (bitwise_or_expression
                            (bitwise_xor_expression
                              (bitwise_and_expression
                                (equality_expression
                                  (comparison_expression
                                    (shift_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (exponent_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (character_literal)))))))))))))))))))))))
      (expression_statement
        (low_precedence_pipe_expression
          (assignment_expression
            (assignment_target
              (pattern_base
                (identifier)))
            (assignment_operator)
            (assignment_expression
              (pipe_expression
                (matchable_expression
                  (pipe_operand_base
                    (range_expression
                      (logical_or_expression
                        (logical_and_expression
                          (bitwise_or_expression
                            (bitwise_xor_expression
                              (bitwise_and_expression
                                (equality_expression
                                  (comparison_expression
                                    (shift_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (exponent_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (character_literal)))))))))))))))))))))))
      (expression_statement
        (low_precedence_pipe_expression
          (assignment_expression
            (assignment_target
              (pattern_base
                (identifier)))
            (assignment_operator)
            (assignment_expression
              (pipe_expression
                (matchable_expression
                  (pipe_operand_base
                    (range_expression
                      (logical_or_expression
                        (logical_and_expression
                          (bitwise_or_expression
                            (bitwise_xor_expression
                              (bitwise_and_expression
                                (equality_expression
                                  (comparison_expression
                                    (shift_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (exponent_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (character_literal)))))))))))))))))))))))
      (expression_statement
        (low_precedence_pipe_expression
          (assignment_expression
            (assignment_target
              (pattern_base
                (identifier)))
            (assignment_operator)
            (assignment_expression
              (pipe_expression
                (matchable_expression
                  (pipe_operand_base
                    (range_expression
                      (logical_or_expression
                        (logical_and_expression
                          (bitwise_or_expression
                            (bitwise_xor_expression
                              (bitwise_and_expression
                                (equality_expression
                                  (comparison_expression
                                    (shift_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (exponent_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (character_literal)))))))))))))))))))))))
      (expression_statement
        (low_precedence_pipe_expression
          (assignment_expression
            (assignment_target
              (pattern_base
                (identifier)))
            (assignment_operator)
            (assignment_expression
              (pipe_expression
                (matchable_expression
                  (pipe_operand_base
                    (range_expression
                      (logical_or_expression
                        (logical_and_expression
                          (bitwise_or_expression
                            (bitwise_xor_expression
                              (bitwise_and_expression
                                (equality_expression
                                  (comparison_expression
                                    (shift_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (unary_expression
                                            (exponent_expression
                                              (postfix_expression
                                                (primary_expression
                                                  (character_literal))))))))))))))))))))))))))
